K8S/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-api
  labels:
    app: fraud-api
spec:
  replicas: 2   # adjust based on load
  selector:
    matchLabels:
      app: fraud-api
  template:
    metadata:
      labels:
        app: fraud-api
    spec:
      containers:
        - name: fraud-api
          image: mlopsdevacr2025.azurecr.io/fraud-api:0.1.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
