K8S/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-api-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  selector:
    app: fraud-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
