K8S/grafana-svc-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-grafana
  namespace: default
spec:
  type: ExternalName
  externalName: prometheus-grafana.monitoring.svc.cluster.local
  ports:
    - port: 80
      targetPort: 80
